# Claim_Processing_Pipeline

./: README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: __init__.py  graph.py  main.py
app/nodes/: aggregator.py  bill.py  discharge.py  id_agent.py  segregator.py
app/utils/: __init__.py  gemini_client.py  pdf_loader.py
tests/: test_api.py  test_workflow.py
